fix: fixed modal height overlap on mobile

--- a/src/components/Modal/style.css
+++ b/src/components/Modal/style.css
@@ -24,7 +24,7 @@
 
 #modal img {
   max-width: 100%;
-  max-height: 68vh;
+  max-height: 60vh;
 }
 
 #add-to-basket {
